--- a/my-mini-compiler/CMakeLists.txt
+++ b/my-mini-compiler/CMakeLists.txt
@@ -9,7 +9,11 @@ set(CMAKE_C_STANDARD 11)
 include_directories(${PROJECT_SOURCE_DIR}/phase1-w25/include)
 
 # Add executables when needed: Make sure you specify the path to your .c or .h file
-add_executable(my-mini-compiler
+add_executable(my-mini-compiler-phase1
         phase1-w25/src/lexer/lexer.c
         phase1-w25/src/dynamic_array.c
         phase1-w25/src/operators.c)
+add_executable(my-mini-compiler-phase2
+        phase2-w25/src/lexer/lexer.c
+        phase2-w25/src/dynamic_array.c
+        phase2-w25/src/operators.c)
