tested to show there is no indirect left recursion in the grammar.

--- a/my-mini-compiler/CMakeLists.txt
+++ b/my-mini-compiler/CMakeLists.txt
@@ -13,7 +13,11 @@ add_executable(my-mini-compiler-phase1
         phase1-w25/src/lexer/lexer.c
         phase1-w25/src/dynamic_array.c
         phase1-w25/src/operators.c)
+# Example: Enable common warning flags for GCC/Clang
+add_compile_options(-Wall -Wextra -Wpedantic)
 add_executable(my-mini-compiler-phase2
         phase2-w25/src/lexer/lexer.c
         phase2-w25/src/dynamic_array.c
-        phase2-w25/src/operators.c)
+        phase2-w25/src/operators.c
+        phase2-w25/src/parser/cfg_recursive_descent_parser.c
+        phase2-w25/src/parser/parser.c)
