--- a/my-mini-compiler/CMakeLists.txt
+++ b/my-mini-compiler/CMakeLists.txt
@@ -6,7 +6,7 @@ project(my-mini-compiler C)
 set(CMAKE_C_STANDARD 11)
 
 # Add include directory (this will be needed to add your tokens to your lexer)
-include_directories(${PROJECT_SOURCE_DIR}/phase1-w25/include)
+include_directories(${PROJECT_SOURCE_DIR}/phase2-w25/include)
 
 # Add executables when needed: Make sure you specify the path to your .c or .h file
 add_executable(my-mini-compiler-phase1
@@ -14,15 +14,11 @@ add_executable(my-mini-compiler-phase1
         phase1-w25/src/dynamic_array.c
         phase1-w25/src/operators.c)
 # Example: Enable common warning flags for GCC/Clang
-add_compile_options(-Wall -Wextra -Wpedantic)
+#add_compile_options(-Wall -Wextra -Wpedantic)
 add_executable(my-mini-compiler-phase2
         phase2-w25/src/lexer/lexer.c
         phase2-w25/src/dynamic_array.c
         phase2-w25/src/operators.c
-<<<<<<< HEAD
-        phase2-w25/src/parser/cfg_recursive_descent_parser.c
-        phase2-w25/src/parser/parser.c)
-=======
+        #phase2-w25/src/parser/cfg_recursive_descent_parser.c
         #phase2-w25/src/parser/parser.c
         )
->>>>>>> origin/Ryan
