--- a/my-mini-compiler/CMakeLists.txt
+++ b/my-mini-compiler/CMakeLists.txt
@@ -22,3 +22,12 @@ add_executable(my-mini-compiler-phase2
         phase2-w25/src/parser/grammar.c
         phase2-w25/src/parser/parser.c
         phase2-w25/src/main.c)
+
+add_compile_options(-Wall -Wextra -Wpedantic)
+add_executable(my-mini-compiler-phase3
+        phase3-w25/src/lexer/lexer.c
+        phase3-w25/src/dynamic_array.c
+        phase3-w25/src/operators.c
+        phase3-w25/src/parser/grammar.c
+        phase3-w25/src/parser/parser.c
+        phase3-w25/src/main.c)
