--- a/my-mini-compiler/CMakeLists.txt
+++ b/my-mini-compiler/CMakeLists.txt
@@ -6,7 +6,11 @@ project(my-mini-compiler C)
 set(CMAKE_C_STANDARD 11)
 
 # Add include directory (this will be needed to add your tokens to your lexer)
-include_directories(${PROJECT_SOURCE_DIR}/phase2-w25/include)
+include_directories(
+    ${PROJECT_SOURCE_DIR}/phase1-w25/include
+    ${PROJECT_SOURCE_DIR}/phase2-w25/include
+    ${PROJECT_SOURCE_DIR}/phase3-w25/include)
+
 
 # Add executables when needed: Make sure you specify the path to your .c or .h file
 add_executable(my-mini-compiler-phase1
@@ -14,7 +18,6 @@ add_executable(my-mini-compiler-phase1
         phase1-w25/src/dynamic_array.c
         phase1-w25/src/operators.c)
 
-add_compile_options(-Wall -Wextra -Wpedantic)
 add_executable(my-mini-compiler-phase2
         phase2-w25/src/lexer/lexer.c
         phase2-w25/src/dynamic_array.c
@@ -22,3 +25,13 @@ add_executable(my-mini-compiler-phase2
         phase2-w25/src/parser/grammar.c
         phase2-w25/src/parser/parser.c
         phase2-w25/src/main.c)
+
+add_compile_options(-Wall -Wextra -Wpedantic)
+add_executable(my-mini-compiler-phase3
+        phase3-w25/src/lexer/lexer.c
+        phase3-w25/src/dynamic_array.c
+        phase3-w25/src/operators.c
+        phase3-w25/src/parser/grammar.c
+        phase3-w25/src/parser/parser.c
+        phase3-w25/src/tree.c
+        phase3-w25/src/main.c)
